// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`esdsl correctly handles filter, query and timerange on context 1`] = `
Object {
  "body": Object {
    "params": Object {
      "body": Object {
        "_source": false,
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match_phrase": Object {
                  "gender": "male",
                },
              },
            ],
            "must": Array [
              Object {
                "query_string": Object {
                  "query": "*",
                  "time_zone": true,
                },
              },
              Object {
                "term": Object {
                  "machine.os.keyword": "osx",
                },
              },
            ],
            "must_not": Array [],
            "should": Array [],
          },
        },
      },
      "index": "kibana_sample_data_logs",
      "size": 4,
    },
  },
  "type": "es_raw_response",
}
`;

exports[`esdsl correctly handles input adds filters 1`] = `
Object {
  "body": Object {
    "params": Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match_phrase": Object {
                  "gender": "male",
                },
              },
            ],
            "must": Array [],
            "must_not": Array [],
            "should": Array [],
          },
        },
      },
      "index": "test",
      "size": 0,
    },
  },
  "type": "es_raw_response",
}
`;

exports[`esdsl correctly handles input adds filters to query with filters 1`] = `
Object {
  "body": Object {
    "params": Object {
      "body": Object {
        "_source": false,
        "query": Object {
          "bool": Object {
            "filter": Array [
              Object {
                "match_phrase": Object {
                  "gender": "male",
                },
              },
            ],
            "must": Array [
              Object {
                "term": Object {
                  "machine.os.keyword": "osx",
                },
              },
            ],
            "must_not": Array [],
            "should": Array [],
          },
        },
      },
      "index": "kibana_sample_data_logs",
      "size": 4,
    },
  },
  "type": "es_raw_response",
}
`;

exports[`esdsl correctly handles input adds query 1`] = `
Object {
  "body": Object {
    "params": Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [],
            "must": Array [
              Object {
                "query_string": Object {
                  "query": "*",
                  "time_zone": true,
                },
              },
            ],
            "must_not": Array [],
            "should": Array [],
          },
        },
      },
      "index": "test",
      "size": 0,
    },
  },
  "type": "es_raw_response",
}
`;

exports[`esdsl correctly handles input adds query to a query with filters 1`] = `
Object {
  "body": Object {
    "params": Object {
      "body": Object {
        "_source": false,
        "query": Object {
          "bool": Object {
            "filter": Array [],
            "must": Array [
              Object {
                "query_string": Object {
                  "query": "*",
                  "time_zone": true,
                },
              },
              Object {
                "term": Object {
                  "machine.os.keyword": "osx",
                },
              },
            ],
            "must_not": Array [],
            "should": Array [],
          },
        },
      },
      "index": "kibana_sample_data_logs",
      "size": 4,
    },
  },
  "type": "es_raw_response",
}
`;

exports[`esdsl correctly handles input ignores timerange 1`] = `
Object {
  "body": Object {
    "params": Object {
      "body": Object {
        "query": Object {
          "bool": Object {
            "filter": Array [],
            "must": Array [],
            "must_not": Array [],
            "should": Array [],
          },
        },
      },
      "index": "test",
      "size": 0,
    },
  },
  "type": "es_raw_response",
}
`;
